--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Why you should indent source code with tabs">
 	<title>Indent with tabs</title>
 	<style>
 html, body {
