fix typo: semantic{e,}

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ pre {
 <main>
 	<h1>Indent with tabs</h1>
 	<p>There are two uses of white space in source code: indentation and alignment.</p>
-	<p>Indentation expresses the <em>semantice level</em> of a source line. This task falls naturally onto tabs.</p>
+	<p>Indentation expresses the <em>semantic level</em> of a source line. This task falls naturally onto tabs.</p>
 	<ul>
 		<li>Semantically correct: one tab is one level in; a space is separation of two words, and emptiness of a character wide.</li>
 		<li>Accessible: visually impaired people might have difficulty reading indentation too small, like 2-space; some might otherwise find indentation too large, like 8-space, too tiring to read. With tabs, they can freely adjust to their comfortable display width.</li>
